--- a/PWA/package.json
+++ b/PWA/package.json
@@ -15,6 +15,7 @@
     "gulp-minify-css": "^1.2.4",
     "gulp-sourcemaps": "^2.6.4",
     "gulp-uglify": "^3.0.0",
+    "gulp-util": "^3.0.8",
     "path": "^0.12.7",
     "run-sequence": "^2.2.1",
     "sw-precache": "^5.2.1"
