--- a/PWA/package.json
+++ b/PWA/package.json
@@ -8,6 +8,7 @@
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-preset-env": "^1.7.0",
+    "fancy-log": "^1.3.2",
     "gulp": "^3.9.1",
     "gulp-babel": "^7.0.1",
     "gulp-concat": "^2.6.1",
@@ -15,7 +16,6 @@
     "gulp-minify-css": "^1.2.4",
     "gulp-sourcemaps": "^2.6.4",
     "gulp-uglify": "^3.0.0",
-    "gulp-util": "^3.0.8",
     "path": "^0.12.7",
     "run-sequence": "^2.2.1",
     "sw-precache": "^5.2.1"
