Icons checking script and icons corrections
Correcting some icons

--- a/API/public_html/.htaccess
+++ b/API/public_html/.htaccess
@@ -10,6 +10,7 @@ Header set X-Frame-Options SAMEORIGIN
 
 # Redirec /whatever to index.php
 RewriteCond %{REQUEST_URI} !/index.php\/?$
+RewriteCond %{REQUEST_URI} !/check_item_icons.php\/?$
 RewriteRule ^\/?.+\/?$ "/index.php" [QSA,L,NC]
 
 #UTF-8
