--- a/PWA/package.json
+++ b/PWA/package.json
@@ -11,6 +11,7 @@
     "fancy-log": "^1.3.2",
     "gulp": "^3.9.1",
     "gulp-babel": "^7.0.1",
+    "gulp-clean": "^0.4.0",
     "gulp-concat": "^2.6.1",
     "gulp-htmlmin": "^4.0.0",
     "gulp-minify-css": "^1.2.4",
