--- a/PWA/package.json
+++ b/PWA/package.json
@@ -14,7 +14,9 @@
     "gulp-clean": "^0.4.0",
     "gulp-concat": "^2.6.1",
     "gulp-htmlmin": "^4.0.0",
+    "gulp-jsdoc3": "^2.0.0",
     "gulp-minify-css": "^1.2.4",
+    "gulp-replace": "^1.0.0",
     "gulp-sourcemaps": "^2.6.4",
     "gulp-uglify": "^3.0.0",
     "path": "^0.12.7",
