--- a/PWA/package.json
+++ b/PWA/package.json
@@ -19,6 +19,7 @@
     "gulp-replace": "^1.0.0",
     "gulp-sourcemaps": "^2.6.4",
     "gulp-uglify": "^3.0.0",
+    "gyronorm": "^2.0.6",
     "path": "^0.12.7",
     "run-sequence": "^2.2.1",
     "sw-precache": "^5.2.1"
