--- a/PWA/src/manifest.json
+++ b/PWA/src/manifest.json
@@ -7,7 +7,7 @@
   "lang": "en-US",
   "orientation": "any",
   "scope": "/",
-  "start_url": "/a",
+  "start_url": "/",
   "icons": [
     {
       "src": "{{ROOT}}/android-chrome-192x192.png",
